--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "python-dotenv>=1.1.1",
+]
+
+[dependency-groups]
+vector-db = [
+    "requests>=2.32.4",
+    "tqdm>=4.67.1",
+]
