--- a/blusql/skill/pyproject.toml
+++ b/blusql/skill/pyproject.toml
@@ -7,7 +7,9 @@ description = "Skill Example"
 
 requires-python = "~=3.12"
 
-dependencies = ["pharia-skill==0.11.1"]
+dependencies = [
+    "pharia-skill==0.11.1",
+]
 
 [dependency-groups]
 dev = [
