--- a/.github/workflows/build-publish-skill.yml
+++ b/.github/workflows/build-publish-skill.yml
@@ -29,10 +29,9 @@ jobs:
           python-version: '3.12'
       
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          enable-cache: true
-          cache-dependency-glob: "skill/uv.lock"
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       
       - name: Install dependencies
         working-directory: ./skill
