--- a/.github/workflows/pharia-skill-ci.yml
+++ b/.github/workflows/pharia-skill-ci.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Skill
+name: Pharia Skill CI
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'skill/**'
-      - '.github/workflows/build-and-publish-skill.yml'
+      - '.github/workflows/pharia-skill-ci.yml'
   pull_request:
     branches:
       - main
@@ -15,13 +15,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
       
@@ -71,7 +73,8 @@ jobs:
           PHARIA_STUDIO_ADDRESS: ${{ secrets.PHARIA_STUDIO_ADDRESS }}
         run: uv run pharia-skill publish generate_query
       
-      - uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: generate-query-wasm
           path: skill/generate_query.wasm
