--- a/blusql/ui/package.json
+++ b/blusql/ui/package.json
@@ -21,6 +21,7 @@
     "@unocss/reset": "66.0.0",
     "pinia": "3.0.1",
     "vue": "3.5.13",
+    "vue-markdown-render": "^2.2.1",
     "vue-router": "4.5.0",
     "zod": "3.24.3"
   },
